--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/friend_requests_popup.css">
     <link rel="stylesheet" href="css/game_popup.css">
     <link rel="stylesheet" href="css/game_popup_participants.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -29,24 +30,46 @@
             <div class="flex-shrink-0 text-center">
                 <div style="position: relative; display: inline-block;">
                     <img id="profilePic" src="/images/utenteDefault.png" alt="Profile Picture" class="rounded-circle"
-                        style="width: 350px; height: 350px; object-fit: cover; border: 5px solid #fff; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
+                        style="width: 250px; height: 250px; object-fit: cover; border: 5px solid #fff; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
                     <label for="fileInput" class="btn btn-primary rounded-circle shadow"
-                        style="position: absolute; bottom: 25px; right: 25px; width: 60px; height: 60px; padding: 12px 0; font-size: 1.5rem;">
+                        style="position: absolute; bottom: 10px; right: 10px; width: 40px; height: 40px; padding: 4px 0; font-size: 1.2rem;">
                         +
                     </label>
                     <button id="removePicBtn" class="btn btn-danger rounded-circle shadow"
-                        style="position: absolute; bottom: 25px; left: 25px; width: 60px; height: 60px; padding: 12px 0; font-size: 1.5rem; display: none;">
+                        style="position: absolute; bottom: 10px; left: 10px; width: 40px; height: 40px; padding: 4px 0; font-size: 1.2rem; display: none;">
                         x
                     </button>
                     <input type="file" id="fileInput" style="display: none;" accept="image/*">
                 </div>
+                <h1 id="username" class="fw-bold mt-4 mb-2 display-6">Loading...</h1>
+                <p id="email" class="text-muted mb-4">Loading...</p>
+                <div class="d-grid gap-2 d-md-block">
+                    <a href="/auth/logout" class="btn btn-outline-danger btn-lg px-5 w-100">Logout</a>
+                </div>
             </div>
 
             <!-- Middle Column: User Details -->
-            <div class="flex-grow-1" style="max-width: 400px;">
-                <h1 id="username" class="fw-bold mb-2 display-5">Loading...</h1>
-                <p id="email" class="text-muted mb-5 fs-4">Loading...</p>
+            <div class="flex-grow-1">
 
+
+                <!-- ELO Statistics -->
+                <div id="eloStatsContainer" class="mb-5" style="display: none;">
+                    <h5 class="fw-bold mb-3">ELO</h5>
+                    <select id="eloSportSelect" class="form-select mb-3" aria-label="Select Sport for ELO">
+                        <option selected disabled>Select a sport...</option>
+                    </select>
+                    <div id="eloDisplay" class="text-center p-3 border rounded bg-light"
+                        style="min-height: 400px; display: flex; align-items: center; justify-content: center;">
+                        <span class="text-muted" id="eloPlaceholder">Select a sport to see your rating history</span>
+                        <canvas id="eloChart" style="display: none; width: 100%; height: 100%;"></canvas>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <!-- Right Column: Friends List -->
+            <div class="flex-shrink-0" style="width: 300px;">
                 <ul class="list-group list-group-flush mb-5">
                     <li
                         class="list-group-item d-flex justify-content-between align-items-center bg-transparent px-0 border-top">
@@ -63,25 +86,6 @@
                     </li>
                 </ul>
 
-                <!-- ELO Statistics -->
-                <div id="eloStatsContainer" class="mb-5" style="display: none;">
-                    <h5 class="fw-bold mb-3">Skill Levels</h5>
-                    <select id="eloSportSelect" class="form-select mb-3" aria-label="Select Sport for ELO">
-                        <option selected disabled>Select a sport...</option>
-                    </select>
-                    <div id="eloDisplay" class="text-center p-3 border rounded bg-light"
-                        style="min-height: 80px; display: flex; align-items: center; justify-content: center;">
-                        <span class="text-muted">Select a sport to see your rating</span>
-                    </div>
-                </div>
-
-                <div class="d-grid gap-2 d-md-block">
-                    <a href="/auth/logout" class="btn btn-outline-danger btn-lg px-5 w-100">Logout</a>
-                </div>
-            </div>
-
-            <!-- Right Column: Friends List -->
-            <div class="flex-shrink-0" style="width: 300px;">
                 <h4 class="fw-bold mb-3 border-bottom pb-2">My Friends</h4>
                 <div id="friendsList" class="d-flex flex-wrap gap-2 justify-content-start">
                     <!-- Friend avatars will be injected here -->
@@ -176,6 +180,9 @@
                                 const eloContainer = document.getElementById('eloStatsContainer');
                                 const sportSelect = document.getElementById('eloSportSelect');
                                 const eloDisplay = document.getElementById('eloDisplay');
+                                const eloPlaceholder = document.getElementById('eloPlaceholder');
+                                const canvas = document.getElementById('eloChart');
+                                let chartInstance = null;
 
                                 eloContainer.style.display = 'block';
 
@@ -184,37 +191,102 @@
 
                                 user.sportsElo.forEach((stat, index) => {
                                     const sportName = stat.sport ? stat.sport.name : 'Unknown Sport';
-                                    const elo = Math.round(stat.elo);
-
                                     const option = document.createElement('option');
-                                    option.value = index; // Use index to retrieve data easily
+                                    option.value = index;
                                     option.textContent = sportName;
-                                    option.dataset.elo = elo;
-                                    option.dataset.sport = sportName;
                                     sportSelect.appendChild(option);
                                 });
 
                                 // Handle Change
                                 sportSelect.addEventListener('change', (e) => {
-                                    const selectedOption = sportSelect.options[sportSelect.selectedIndex];
-                                    if (selectedOption.value !== "") {
-                                        const elo = selectedOption.dataset.elo;
-                                        const sport = selectedOption.dataset.sport;
+                                    const selectedIndex = sportSelect.value;
+                                    if (selectedIndex === "") return;
 
-                                        eloDisplay.innerHTML = `
-                                            <div>
-                                                <h3 class="mb-0 text-primary fw-bold">${sport}</h3>
-                                                <div class="mt-2">
-                                                    <span class="badge bg-info text-dark rounded-pill fs-4">${elo} pts</span>
-                                                </div>
-                                            </div>
-                                        `;
+                                    const stat = user.sportsElo[selectedIndex];
+                                    const sportName = stat.sport ? stat.sport.name : 'Unknown Sport';
+
+                                    // Prepare Data
+                                    // Start with initial 1200? Or just history?
+                                    // If history is empty, plot just current ELO as a single point or flat line?
+                                    // Let's assume history exists if they played games.
+                                    // If history is empty but elo != 1200, it means legacy or issue.
+
+                                    const labels = [];
+                                    const data = [];
+
+                                    if (stat.history && stat.history.length > 0) {
+                                        // Sort history by date just in case
+                                        const history = stat.history.sort((a, b) => new Date(a.date) - new Date(b.date));
+
+                                        history.forEach(h => {
+                                            const date = new Date(h.date).toLocaleDateString();
+                                            labels.push(date);
+                                            data.push(h.elo);
+                                        });
                                     }
+
+                                    // Always add current state as the last point if it's different from last history?
+                                    // The history records the state AFTER update. So last history IS current state.
+                                    // If history is empty, usually means 1200.
+                                    if (data.length === 0) {
+                                        labels.push('Start');
+                                        data.push(stat.elo);
+                                    }
+
+                                    // Show Canvas, Hide Placeholder
+                                    eloPlaceholder.style.display = 'none';
+                                    canvas.style.display = 'block';
+
+                                    // Destroy previous chart
+                                    if (chartInstance) {
+                                        chartInstance.destroy();
+                                    }
+
+                                    // Create Chart
+                                    chartInstance = new Chart(canvas, {
+                                        type: 'line',
+                                        data: {
+                                            labels: labels,
+                                            datasets: [{
+                                                label: `${sportName} ELO`,
+                                                data: data,
+                                                borderColor: '#0d6efd', // Bootstrap primary
+                                                backgroundColor: 'rgba(13, 110, 253, 0.1)',
+                                                tension: 0.3,
+                                                fill: true,
+                                                pointRadius: 5,
+                                                pointHoverRadius: 7
+                                            }]
+                                        },
+                                        options: {
+                                            responsive: true,
+                                            maintainAspectRatio: false,
+                                            plugins: {
+                                                legend: {
+                                                    display: true
+                                                },
+                                                tooltip: {
+                                                    callbacks: {
+                                                        label: function (context) {
+                                                            return `ELO: ${context.parsed.y}`;
+                                                        }
+                                                    }
+                                                }
+                                            },
+                                            scales: {
+                                                y: {
+                                                    beginAtZero: false,
+                                                    suggestedMin: 1000,
+                                                    suggestedMax: 1400
+                                                }
+                                            }
+                                        }
+                                    });
                                 });
 
                                 // Auto-select first sport if available
                                 if (user.sportsElo.length > 0) {
-                                    sportSelect.selectedIndex = 1; // Index 0 is the disabled placeholder
+                                    sportSelect.selectedIndex = 1;
                                     sportSelect.dispatchEvent(new Event('change'));
                                 }
                             }
