--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard - TrentoArena</title>
+     <link rel="icon" type="image/png" href="/images/trophy.png">
+    <link rel="apple-touch-icon" href="/images/trophy.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/popup_shared.css">
