--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrentoArena - Profile</title>
 
+    <link rel="icon" type="image/png" href="/images/account.png">
+    <link rel="apple-touch-icon" href="/images/account.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/style.css">
